RichwoodNew/src/objects/Assigned_Device__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Devices Assigned to this Person</relationshipLabel>
        <relationshipName>Assigned_Devices</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Turned_In__c</fullName>
        <label>Date Turned In</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>Personnel to Whom this Device Was/Is Assigned</relationshipLabel>
        <relationshipName>Assigned_Devices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Assigned Device</label>
    <nameField>
        <displayFormat>AD{00000}</displayFormat>
        <label>Assigned Device</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assigned Devices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>